--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,10 @@
 	<div class="container" style="display: none;" data-bind="visible: true">
 		<div class="row">
 			<div class="col-sm-12">
-				<h1>UTAU Lyrics Wiki importer</h1>
+				<h1>
+					UTAU Lyrics Wiki importer
+					<small>Tool for importing songs from <a href="http://utaulyrics.wikia.com/">UTAU Lyrics Wiki</a> to <a href="http://vocadb.net">VocaDB</a>.</small>
+				</h1>
 				
 				<div class="alert alert-danger" data-bind="visible: !loggedIn()">
 					You must be logged in to VocaDB to use this page. 
@@ -100,7 +103,8 @@
 						<li data-bind="text: type + ($data.lang ? ' (' + $data.lang + ')' : '')"></li>
 					</ul>
 					<!-- /ko -->
-
+					
+					<br />
 					<p>
 						<button data-bind="enable: !$parent.submitting()" class="btn btn-primary" type="submit">Submit to VocaDB</button>
 					</p>
@@ -114,15 +118,6 @@
 			</div>
 		</div>		
 	</div>
-
-	<script type="text/html" id="artists-template">
-		<ul data-bind="foreach: $data">
-			<li>
-				<a data-bind="visible: $data.vocadb, text: name + ($data.roles ? ' (' + roles + ')': ''), attr: { href: 'http://vocadb.net/Ar/' + $data.vocadb }"></a>
-				<span data-bind="visible: !$data.vocadb, text: name + ($data.roles ? ' (' + roles + ')': '')"></span>
-			</li>
-		</ul>
-	</script>
 
 	<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
