#4: show SoundCloud PVs, some typings fixes

--- a/web/index.html
+++ b/web/index.html
@@ -64,6 +64,7 @@
 						<li data-bind="visible: website === 'yt'"><a data-bind="text: 'YouTube', attr: { href: $root.getPvUrl($data) }"></a></li>
 						<li data-bind="visible: website === 'nn'"><a data-bind="text: 'NicoNicoDouga', attr: { href: $root.getPvUrl($data) }"></a></li>
 						<li data-bind="visible: website === 'pp'"><a data-bind="text: 'Piapro', attr: { href: $root.getPvUrl($data) }"></a></li>
+						<li data-bind="visible: website === 'sc'"><a data-bind="text: 'SoundCloud', attr: { href: $root.getPvUrl($data) }"></a></li>
 					</ul>
 					
 					<h3>Artists</h3>
